Swagger documentation - Done. Everything - Done
