# main.go
@@ -1,5 +1,16 @@
 package main
 
+// @title Student CRUD using fiber
+// @version 1.1
+// @description This is a sample CRUD application implementing gofiber/fiber and /arsmn/fiber-swagger
+// @termsOfService http://swagger.io/terms/
+// @contact.name API Support
+// @contact.email support@novalab.uz
+// @license.name Novalab 2.0
+// @license.url novalab.uz
+// @host localhost:8084
+// @BasePath /
+
 import (
 	"fmt"
 	"log"
@@ -15,17 +26,6 @@ import (
 	// docs are generated by Swag CLI, you have to import them.
 	_ "github.com/albukhary/student_fiber/docs"
 )
-
-// @title Student CRUD using fiber
-// @version 1.1
-// @description This is a sample CRUD application implementing gofiber/fiber and /arsmn/fiber-swagger
-// @termsOfService http://swagger.io/terms/
-// @contact.name API Support
-// @contact.email support@novalab.uz
-// @license.name Novalab 2.0
-// @license.url novalab.uz
-// @host localhost:8084
-// @BasePath /
 
 //struct Student represents body of
 type Student struct {
@@ -43,10 +43,7 @@ func main() {
 	app := fiber.New()
 
 	app.Get("/swagger/*", swagger.Handler)
-	/*app.Get("/swagger/*", swagger.New(swagger.Config{ // custom
-		URL:         "docs/swagger.json",
-		DeepLinking: false,
-	}))*/
+
 	setupRoutes(app)
 
 	//Loading environment variables for DATABASE connection
@@ -83,10 +80,11 @@ func setupRoutes(app *fiber.App) {
 
 // API Controllers
 
-// swagger: route GET /students students listStudents
-// Returns a list of students
-// responses :
-// 200: studentsListResponse
+// getStudents godoc
+// @Summary Retrieves the list of all students
+// @Produce json
+// @Success 200 {object} []Student
+// @Router /students [get]
 func getStudents(c *fiber.Ctx) error {
 	var students []Student
 
@@ -100,12 +98,12 @@ func getStudents(c *fiber.Ctx) error {
 	return c.JSON(students)
 }
 
-// swagger: route GET /student/{id} student getStudent
-// Finds and returns a particular student with the requested ID
-// responses:
-// 200: studentResponse
-
-// constroller of Person
+// getStudent godoc
+// @Summary Retrieves user based on given ID
+// @Produce json
+// @Param id path integer true "Student ID"
+// @Success 200 {object} Student
+// @Router /student/{id} [get]
 func getStudent(c *fiber.Ctx) error {
 	idParam := c.Params("id")
 
@@ -127,16 +125,15 @@ func getStudent(c *fiber.Ctx) error {
 	return c.JSON(student)
 }
 
-// swagger: route POST /create/student createStudent
-// creates a student of given parameters and writes into the database
-//
-// Consumes:
-// - application/json
-// Produces:
-// - application/json
-
-// Postman will send student data as JSON
-// and we will put it into student struct and then into database
+// createStudent godoc
+// @Summary Creates a student record with user input details and writes into database
+// @Produce json
+// @Param id path integer true "Student ID"
+// @Param name path string true "Student Name"
+// @Param email path string true "Student Email"
+// @Param Age path integer true "Student Age"
+// @Success 200 {object} Student
+// @Router /create/student [put]
 func createStudent(c *fiber.Ctx) error {
 	var student Student
 
@@ -152,13 +149,12 @@ func createStudent(c *fiber.Ctx) error {
 	return c.JSON(student)
 }
 
-// swagger: route DELETE /delete/student/{id} delete student deleteStudent
-// Finds and deletes a student with the requested ID
-// Consumes:
-// - application/json
-// Produces:
-// - application/json
-
+// deleteStudent godoc
+// @Summary Deletes a student with the specified ID
+// @Produce json
+// @Param id path integer true "Student ID"
+// @Success 200 {object} Student
+// @Router /delete/student/{id} [delete]
 func deleteStudent(c *fiber.Ctx) error {
 	idParam := c.Params("id")
 
@@ -186,14 +182,15 @@ func deleteStudent(c *fiber.Ctx) error {
 	return c.JSON(student)
 }
 
-// swagger: route PUT /student/{id} update student updateStudent
-// Updates the details of the student with the requested ID according to the requested parameters
-// Consumes:
-// - application/json
-// Produces:
-// -application/json
-
-// Update controller
+// updateStudent godoc
+// @Summary Updates a student record with user input details and writes into database
+// @Produce json
+// @Param id path integer true "Student ID"
+// @Param name path string true "New Student Name"
+// @Param email path string true "New Student Email"
+// @Param Age path integer true "New Student Age"
+// @Success 200 {object} Student
+// @Router /update/student/{id} [patch]
 func updateStudent(c *fiber.Ctx) error {
 	var student Student
 
